--- a/Contact-Us.css
+++ b/Contact-Us.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: cursive;
-    background-image: url("herbal-teas.jpeg");
+    background-image: url("pictures/herbal-teas.jpeg");
     width: 100%;
     height: 100vh;
     background-size: cover;
