--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ hr {
 
 
 #home {
-    background-image: url("hero.jpeg");
+    background-image: url("pictures/hero.jpeg");
     width: 100%;
     height: 100vh;
     background-size: cover;
